fix font size on small screen

--- a/style.css
+++ b/style.css
@@ -483,4 +483,11 @@ nav.sticky {
   .empty-div {
     display: none;
   }
+  #team div h1 {
+    font-size: 3em;
+    margin-bottom: 0.3em;
+  }
+  #team div p {
+    font-size: 1.2em;
+  }
 }
